updates to blog post; mostly added links

--- a/_posts/2024-05-29-persist.md
+++ b/_posts/2024-05-29-persist.md
@@ -20,15 +20,15 @@ _For the publication and details on the Persist technique, please see [the paper
 
 **In this blog post, we’re introducing Persist, our Jupyter Plugin, to make interactivity in Jupyter notebooks useful and persistent. Jupyter is open source and available on GitHub. Head on over to [the Persist website](https://vdl.sci.utah.edu/persist) to learn more, or [join the community on Slack](https://join.slack.com/t/persistext/shared_invite/zt-2jobwmk39-IT~uYbDQyfDrXwBUwVxI7w).**
 
-Computational notebooks are a modern realization of Donald Knuth’s vision of literate programming. These notebooks allow us to seamlessly mix code, visualizations, figures, and text to analyze data and narrate the analysis. The most popular notebooks are Jupyter notebooks.
+Computational notebooks are a modern realization of [Donald Knuth’s vision of literate programming](https://en.wikipedia.org/wiki/Literate_programming). These notebooks allow us to seamlessly mix code, visualizations, figures, and text to analyze data and narrate the analysis. The most popular notebooks are [Jupyter notebooks](https://jupyter.org/).
 
-Jupyter supports interactive outputs like Vega-Altair charts and Jupyter Widgets in addition to text, static plots, and tables. Code-based analysis in notebooks can be re-run, and the results of one cell can be used in another, making the analysis reproducible and reusable. In contrast, interactive analysis in notebooks presents significant challenges concerning reproducibility and reusability.
+Jupyter supports interactive outputs like [Vega-Altair](https://altair-viz.github.io/) charts and Jupyter Widgets in addition to text, static plots, and tables. Code-based analysis in notebooks can be re-run, and the results of one cell can be used in another, making the analysis reproducible and reusable. In contrast, interactive analysis in notebooks presents significant challenges concerning reproducibility and reusability.
 
 ## Visualizations in Notebooks are a Dead End!
 
-Until now, there has been a significant disconnect between code and the interactive outputs of notebooks. While code can generate interactive visualizations (such as those created with Vega-Altair), **the results of these interactions cannot be accessed in code**. For instance, if a filter is applied in a visualization, analysts must write additional code to replicate the filter if they want to use it later in their notebook. This limitation vastly reduces the usefulness of interactions within visualizations.
+Until now, there has been a significant disconnect between code and the interactive outputs of notebooks. While code can generate interactive visualizations (such as those created with Vega-Altair), **the results of these interactions cannot be accessed in code**. For instance, if a filter is applied in a visualization, analysts must write additional code to replicate the filter if they want to use it later in their notebook. **This limitation vastly reduces the usefulness of interactions within visualizations**.
 
-Furthermore, there is a disparity between code and interactions in terms of persistence. Changes to the code are saved and persist across restarts and re-executions. However, interactions are transient and are lost when the notebook is restarted, or the cell is re-executed. This lack of persistence makes visual analysis difficult to reproduce without the added effort of documenting each visual analysis step.
+Furthermore, there is a disparity between code and interactions in terms of persistence. Changes to the code are saved and persist across restarts and re-executions. However, interactions are transient and are lost when the notebook is restarted or the cell is re-executed. This lack of persistence makes visual analysis difficult to reproduce without the added effort of documenting each visual analysis step.
 
 <figure>
     <img style="box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);" src="{{site.base_url}}/assets/images/posts/2024_persist_rexec.gif" alt="GIF showing points in the scatterplot being selected, the cell being re-run and the selection is lost." />
@@ -37,13 +37,13 @@ Furthermore, there is a disparity between code and interactions in terms of pers
 
 ## Persist makes Interactive Visualizations in Notebooks Useful.
 
-To address these challenges, we have developed Persist, a JupyterLab extension that captures interaction provenance, making interactions persistent and reusable. Persist bridges the gap between code and interactive visualizations, ensuring that all interactions are tracked, recorded, and can be reapplied automatically.
+To address these challenges, we have developed [Persist](https://vdl.sci.utah.edu/persist), a JupyterLab extension that captures [interaction provenance](https://apps.vdl.sci.utah.edu/trrack), making interactions persistent and reusable. Persist bridges the gap between code and interactive visualizations, ensuring that all interactions are tracked, recorded, and can be reapplied automatically.
 
 ### Analysis with Persist
 
-It’s easiest to see how it works by following an analysis. We’ll look at [avalanches in the Utah mountains](https://utahavalanchecenter.org/). You can follow along using this [binder instance.](https://mybinder.org/v2/gh/visdesignlab/persist/HEAD?labpath=examples%2Fblog.ipynb) _Binder instance might take a few minutes to start the first time._ You can also [download the notebook](https://raw.githubusercontent.com/visdesignlab/persist/main/examples/blog.ipynb) and run the notebook in a local JupyterLab instance. Follow the instructions [here](https://vdl.sci.utah.edu/persist/docs/installation) to set up local JupyterLab with Persist extension.
+It’s easiest to see how it works by following an analysis. We’ll look at [avalanches in the Utah mountains](https://utahavalanchecenter.org/). You can follow along using this [binder instance.](https://mybinder.org/v2/gh/visdesignlab/persist/HEAD?labpath=examples%2Fblog.ipynb) (Binder instance might take a few minutes to start the first time  — please be patient.) You can also [download the notebook](https://raw.githubusercontent.com/visdesignlab/persist/main/examples/blog.ipynb) and run the notebook in a local JupyterLab instance. Follow the instructions [here](https://vdl.sci.utah.edu/persist/docs/installation) to set up local JupyterLab with Persist extension.
 
-_The notebook uses VegaAltair to create interactive visualizations and assumes some familiarity with VegaAltair, VegaLite, and the declarative approach to creating visualizations. For a quick introduction, refer to their [getting started](https://altair-viz.github.io/getting_started/overview.html). You won’t have to write any VegaAltair code to follow the blog._
+The notebook uses Vega-Altair to create interactive visualizations and assumes some familiarity with Vega-Altair, Vega Lite, and the declarative approach to creating visualizations. For a quick introduction, refer to their [getting started](https://altair-viz.github.io/getting_started/overview.html). You won’t have to write any Vega-Altair code to follow the blog.
 
 We will load the data in a Pandas dataframe.
 
@@ -58,7 +58,7 @@ av_ut.head()
 
 <img style="box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); padding: 0.5em;" src="{{site.base_url}}/assets/images/posts/2024_persist_df_loaded.png" alt="" />
 
-After loading the data, we examine the data in an interactive data table using the following code.
+After loading the data, we examine it in an interactive data table using the following code.
 
 ```py
 PR.PersistTable(av_ut, df_name="av_ut1")
@@ -199,9 +199,7 @@ Interactions recorded in the provenance graph are translated into data operation
 
 Persist is not the first attempt to bridge the gap between code and interactive visualizations in notebooks. B2 and Mage are two other notable approaches.
 
-B2 bridges code and interactive visualizations using data queries and selections as shared abstractions between code and interactions. This method injects code into cells to preserve interactions.
-
-Mage detects interactions in outputs, maps them to equivalent code using templates, and injects the code into cells.
+[B2](https://github.com/yifanwu/b2) bridges code and interactive visualizations using data queries and selections as shared abstractions between code and interactions. This method injects code into cells to preserve interactions. [Mage](https://dl.acm.org/doi/abs/10.1145/3379337.3415842) detects interactions in outputs, maps them to equivalent code using templates, and injects the code into cells.
 
 In contrast, Persist represents interaction provenance as a provenance graph, maintaining a clear separation between code and interactions. Persist applies the actions captured in the provenance graph when the cell is run rather than generating equivalent pandas code and inserting it into the notebook.
 
