fixing many links in the blog post after doc restructuring

--- a/_posts/2024-06-20-revisit.md
+++ b/_posts/2024-06-20-revisit.md
@@ -27,16 +27,16 @@ Due to the different types of components you can use reVISit for a diverse set o
 
 ReVISit is designed to accommodate sophisticated stimuli and study designs. Suppose you want to [replicate the seminal Cleveland and McGill study](https://revisit.dev/study/demo-cleveland/). With reVISit you could implement a React-based set of visualizations (a bar chart, a stacked bar chart, a pie chart), and then pass parameters, such as the data, and the markers to highlight the marks, all via the study configuration. 
 
-Similarly, the reVISit spec enables designers to create [controlled sequences](ADD LINK TODO) defining in which order participants see stimuli. reVISit supports fixed, random, and latin square designs that can be nested at various levels. For example, the overall study sequence (intro, training, experiment, survey) could be fixed. In the experiment arm, two conditions could use a latin-square design. Within each condition, the experiment could randomly draw a small number of stimuli from a large stimuli pool while interspersing attention checks at random points and adding breaks. 
+Similarly, the reVISit spec enables designers to create [controlled sequences](https://revisit.dev/docs/designing-studies/study-sequences/) defining in which order participants see stimuli. reVISit supports fixed, random, and latin square designs that can be nested at various levels. For example, the overall study sequence (intro, training, experiment, survey) could be fixed. In the experiment arm, two conditions could use a latin-square design. Within each condition, the experiment could randomly draw a small number of stimuli from a large stimuli pool while interspersing attention checks at random points and adding breaks. 
 
 ### Assembling and Deploying your Study
 
-The components and your study configuration are then used to [assemble a web-based study](https://revisit.dev/docs/getting-started/your-first-study/). You can first look at your study on your local browser, and if you want to share it deploy it to the web server of your choice. We [recommend and document deploying to GitHub pages](https://revisit.dev/docs/tutorials/deploying-to-static-website/), but any web server you have access to will do.   
+The components and your study configuration are then used to [assemble a web-based study](https://revisit.dev/docs/getting-started/your-first-study/). You can first look at your study on your local browser, and if you want to share it deploy it to the web server of your choice. We [recommend and document deploying to GitHub pages](https://revisit.dev/docs/data-and-deployment/deploying-to-static-website/), but any web server you have access to will do.   
 
 You can then use the online version to direct participants to your study. You can use crowdsourcing platforms such as Prolific, Mechanical Turk or LabintheWild, or you can simply send a link to participants that you have recruited in other ways. 
 
 ### Data Collection 
-A typical study will have response fields, such as a text field or a slider, to provide the response. Such form-based responses are tracked by reVISit by default and can be downloaded in either JSON or a tidy tabular format. Similarly, you can provide [response data out of interactive stimuli](https://revisit.dev/docs/tutorials/html-stimulus/). For example, if a task is to click on a specific bar in a bar chart, you can log wich bars were clicked. ReVISit tracks a diverse set of browser window events such as mouse moves, clicks, scrolls, resizes, which are time-stamped and can hence be used for basic log file analysis. 
+A typical study will have response fields, such as a text field or a slider, to provide the response. Such form-based responses are tracked by reVISit by default and can be downloaded in either JSON or a tidy tabular format. Similarly, you can provide [response data out of interactive stimuli](https://revisit.dev/docs/designing-studies/html-stimulus/). For example, if a task is to click on a specific bar in a bar chart, you can log wich bars were clicked. ReVISit tracks a diverse set of browser window events such as mouse moves, clicks, scrolls, resizes, which are time-stamped and can hence be used for basic log file analysis. 
 
 ReVISit also supports advanced provenance tracking based on [trrack](https://apps.vdl.sci.utah.edu/trrack) a provenance tracking library  developed at our lab. If you instrument your study stimuli with trrack, you can recreate every state of your interface of every single participant! This can be incredibly useful to [understand nuances of user behavior](https://vdl.sci.utah.edu/publications/2021_chi_revisit/), as well as to help you debug your stimuli by exploring what went wrong in a particular session. In a future release, reVISit will also allow you to dynamically browse these events and fully “re-hydrate” all participants experiments. 
 
@@ -46,13 +46,13 @@ ReVISit is implemented as a (mostly) server-less application, meaning that you d
 
 If you’re running a local study, you actually can get away without this – you can just download the data from your browser after a study is complete. For online studies, we use Google Firebase to store data.
 
-Currently, [setting up Firebase for a reVISit study](https://revisit.dev/docs/tutorials/firebase-setup/) might be the most challenging part of working with reVISit. On the plus side, Firebase is a tried and true system where you have full control over your data. You even have options to choose the locale of your server so that you are compliant with your country's regulations on data storage. 
+Currently, [setting up Firebase for a reVISit study](https://revisit.dev/docs/data-and-deployment/firebase-setup/) might be the most challenging part of working with reVISit. On the plus side, Firebase is a tried and true system where you have full control over your data. You even have options to choose the locale of your server so that you are compliant with your country's regulations on data storage. 
 
 ### Data Analysis
 
 ReVISit is not meant to replace your usual data analysis approaches. Instead, it aims to make it easy to export data in the formats you might use in R, Python, or your analysis platform of choice. 
 
-ReVISit, however, does provide a basic [analytics interface](https://revisit.dev/docs/analysis-dashboard/) that is most useful for monitoring the progress of your study. You can also use reVISit to identify participants that didn’t appropriately complete the study and reject them, which is most useful if you want to ensure that you have appropriate numbers of participants in your latin square design. 
+ReVISit, however, does provide a basic [analytics interface](https://revisit.dev/docs/analysis/) that is most useful for monitoring the progress of your study. You can also use reVISit to identify participants that didn’t appropriately complete the study and reject them, which is most useful if you want to ensure that you have appropriate numbers of participants in your latin square design. 
 
 ## What are the Benefits of Using reVISit? 
 
