fixed language issues

--- a/_posts/2024-06-20-revisit.md
+++ b/_posts/2024-06-20-revisit.md
@@ -10,7 +10,7 @@ authors:
 publication_key: 2023_shortpaper_revisit
 abstract: "Today we’re announcing the release of reVISit version 1.0, our open platform for designing, debugging, publishing, and disseminating your online visualization user studies!    
 "
-lead-image: /assets/images/publications/2023_shortpaper_revisit.png
+lead-image: /assets/images/posts/2024-06-20_revisit-overview.png
 
 lead-image-alt-text: "Diagram of the revisit workflow. The study specification and components are used to compile an interactive, web-based study. As participants complete the study data is stored in Firebase and can be downloaded as tabular or JSON files, for subsequent analysis in analytics tools. "
  
@@ -23,11 +23,11 @@ You might have heard of **[reVISit](https://revisit.dev/)** before from [our pap
 
 ReVISit is a software framework that enables you to [assemble experimental stimuli and survey questions into an online user study](https://revisit.dev/docs/getting-started/how-does-it-work/). ReVISit uses a JSON grammar, the **reVISit Spec**, to describe the setup of your study. Stimuli are contained in components and can be either markdown, images, web pages, React components, or survey questions. The figure at the top shows the relationship of the reVISit Spec, the components, and how they are then compiled into a study. 
 
-Due to the different types of components you can use reVISit for a diverse set of studies, spanning simple surveys, image-based perceptual experiments, and experiments evaluating complex interactive visualizations. 
+Due to the different types of components, you can use reVISit for a diverse set of studies, spanning simple surveys, image-based perceptual experiments, and experiments evaluating complex interactive visualizations. 
 
 ReVISit is designed to accommodate sophisticated stimuli and study designs. Suppose you want to [replicate the seminal Cleveland and McGill study](https://revisit.dev/study/demo-cleveland/). With reVISit you could implement a React-based set of visualizations (a bar chart, a stacked bar chart, a pie chart), and then pass parameters, such as the data, and the markers to highlight the marks, all via the study configuration. 
 
-Similarly, the reVISit spec enables designers to create [controlled sequences](https://revisit.dev/docs/designing-studies/study-sequences/) defining in which order participants see stimuli. reVISit supports fixed, random, and latin square designs that can be nested at various levels. For example, the overall study sequence (intro, training, experiment, survey) could be fixed. In the experiment arm, two conditions could use a latin-square design. Within each condition, the experiment could randomly draw a small number of stimuli from a large stimuli pool while interspersing attention checks at random points and adding breaks. 
+Similarly, the reVISit spec enables designers to create [controlled sequences](https://revisit.dev/docs/designing-studies/study-sequences/) defining in which order participants see stimuli. reVISit supports fixed, random, and Latin square designs that can be nested at various levels. For example, the overall study sequence (intro, training, experiment, survey) could be fixed. In the experiment arm, two conditions could use a Latin-square design. Within each condition, the experiment could randomly draw a small number of stimuli from a large stimuli pool while interspersing attention checks at random points and adding breaks. 
 
 ### Assembling and Deploying your Study
 
@@ -36,7 +36,7 @@ The components and your study configuration are then used to [assemble a web-bas
 You can then use the online version to direct participants to your study. You can use crowdsourcing platforms such as Prolific, Mechanical Turk or LabintheWild, or you can simply send a link to participants that you have recruited in other ways. 
 
 ### Data Collection 
-A typical study will have response fields, such as a text field or a slider, to provide the response. Such form-based responses are tracked by reVISit by default and can be downloaded in either JSON or a tidy tabular format. Similarly, you can provide [response data out of interactive stimuli](https://revisit.dev/docs/designing-studies/html-stimulus/). For example, if a task is to click on a specific bar in a bar chart, you can log wich bars were clicked. ReVISit tracks a diverse set of browser window events such as mouse moves, clicks, scrolls, resizes, which are time-stamped and can hence be used for basic log file analysis. 
+A typical study will have response fields, such as a text field or a slider, to provide the response. Such form-based responses are tracked by reVISit by default and can be downloaded in either JSON or a tidy tabular format. Similarly, you can provide [response data out of interactive stimuli](https://revisit.dev/docs/designing-studies/html-stimulus/). For example, if a task is to click on a specific bar in a bar chart, you can log which bars were clicked. ReVISit tracks a diverse set of browser window events such as mouse moves, clicks, scrolls, resizes, which are time-stamped and can hence be used for basic log file analysis. 
 
 ReVISit also supports advanced provenance tracking based on [trrack](https://apps.vdl.sci.utah.edu/trrack) a provenance tracking library  developed at our lab. If you instrument your study stimuli with trrack, you can recreate every state of your interface of every single participant! This can be incredibly useful to [understand nuances of user behavior](https://vdl.sci.utah.edu/publications/2021_chi_revisit/), as well as to help you debug your stimuli by exploring what went wrong in a particular session. In a future release, reVISit will also allow you to dynamically browse these events and fully “re-hydrate” all participants experiments. 
 
@@ -44,15 +44,15 @@ ReVISit also supports advanced provenance tracking based on [trrack](https://app
 
 ReVISit is implemented as a (mostly) server-less application, meaning that you don’t have to run, secure, and maintain a server to use reVISit. The only exception to this is data storage, as obviously, the data of online participants has to be stored somewhere. 
 
-If you’re running a local study, you actually can get away without this – you can just download the data from your browser after a study is complete. For online studies, we use Google Firebase to store data.
+If you’re running a local study, you can get away without this – you can just download the data from your browser after a study is complete. For online studies, we use Google Firebase to store data.
 
-Currently, [setting up Firebase for a reVISit study](https://revisit.dev/docs/data-and-deployment/firebase-setup/) might be the most challenging part of working with reVISit. On the plus side, Firebase is a tried and true system where you have full control over your data. You even have options to choose the locale of your server so that you are compliant with your country's regulations on data storage. 
+Currently, [setting up Firebase for a reVISit study](https://revisit.dev/docs/data-and-deployment/firebase-setup/) might be the most challenging part of working with reVISit. On the plus side, Firebase is a tried-and-true system where you have full control over your data. You even have options to choose the locale of your server so that you are compliant with your country's regulations on data storage. 
 
 ### Data Analysis
 
 ReVISit is not meant to replace your usual data analysis approaches. Instead, it aims to make it easy to export data in the formats you might use in R, Python, or your analysis platform of choice. 
 
-ReVISit, however, does provide a basic [analytics interface](https://revisit.dev/docs/analysis/) that is most useful for monitoring the progress of your study. You can also use reVISit to identify participants that didn’t appropriately complete the study and reject them, which is most useful if you want to ensure that you have appropriate numbers of participants in your latin square design. 
+ReVISit, however, does provide a basic [analytics interface](https://revisit.dev/docs/analysis/) that is most useful for monitoring the progress of your study. You can also use reVISit to identify participants that didn’t appropriately complete the study and reject them, which is most useful if you want to ensure that you have appropriate numbers of participants in your Latin square design. 
 
 ## What are the Benefits of Using reVISit? 
 
@@ -74,7 +74,7 @@ We’ve also ourselves run several successful studies, such as [a study on guard
 
 ## How Can I Learn More or Get Involved? 
 
-We’re grateful to all the community members who have shared their study needs and helped to make ReVISit 1.0 a reality, and we’re looking forward to bringing the community exciting new features in the coming year. Future releases will include better debugging tools through study rehydration, a way to capture and code think-aloud data, and improved analysis capabilites. Depending on community feedback we're also interested in branching out to unconventional display devices (phones, AR/VR, etc.)
+We’re grateful to all the community members who have shared their study needs and helped to make ReVISit 1.0 a reality, and we’re looking forward to bringing the community exciting new features in the coming year. Future releases will include better debugging tools through study rehydration, a way to capture and code think-aloud data, and improved analysis capabilities. Depending on community feedback we're also interested in branching out to unconventional display devices (phones, AR/VR, etc.)
 
 To take your first steps with reVISit, check out our [getting started guide](https://revisit.dev/docs/getting-started/) for instructions on how to install our software and to build a study.
 
