Add new team members and remove old/dummy members

--- a/_posts/2020-07-06-vdl-blog.md
+++ b/_posts/2020-07-06-vdl-blog.md
@@ -5,7 +5,7 @@ date: 2020-07-06 13:00:00
 categories: blog
 type: blog
 authors: 
- - lex
+ - chi-ren
  - akbaba
 abstract: "tldr: We're starting a blog to communicate about our research and share our thoughts on data visualization!" 
 ---
